[gd_scene load_steps=3 format=3 uid="uid://cnvlar5eex7x1"]

[ext_resource type="Script" path="res://screens/main_menu.gd" id="1_qk8qt"]
[ext_resource type="AudioStream" uid="uid://dajis4ocm8c64" path="res://sound/music/Menu_Music.mp3" id="2_s2cut"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qk8qt")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_s2cut")
volume_db = -10.0

[node name="Main" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 497.0
offset_top = 416.0
offset_right = 615.0
offset_bottom = 526.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 16

[node name="Play" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="Credits" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Credits"

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
text = "Aiden Mathews - Programming
Aalok Zimmerman - Level Design
Ella Bereziuk - Art Design"
fit_content = true
autowrap_mode = 0

[node name="Back" type="Button" parent="Credits/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="pressed" from="Main/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Credits/VBoxContainer/Back" to="." method="_on_back_pressed"]
